--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, welcome to my website!!</h1>
+  <h1>Hello, welcome to my website!</h1>
   <p>This is a site I built from scratch.</p>
 
   <button onclick="showMessage()">Click Me</button>
