Describe your update

--- a/index.html
+++ b/index.html
@@ -3,14 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My First Website</title>
+  <title>Jamie Johnson | Aspiring software engineer</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, welcome to my website!</h1>
-  <p>This is a site I built from scratch.</p>
-
+  <h1>Hey there!</h1>
+  <p>My name is Jamie Johnson. I'm from Bristol and currently studying Maths, Physics and Chemistry in my final year of sixth form.</p>
+  <br>
+  <hr>
+  <br>
+  <h2> Programming Languages</h2>
+  <img src="/images/csharp-logo-265a149e.svg" height="100" style="display:inline-block;">
+  <img src="/images/Python-logo-notext.svg.png" height="100" style="display:inline-block;">
+  <img src="/images/HTML5_logo_and_wordmark.svg.png" height="100" style="display:inline-block;">
+  <br>
+  <p> The main languages I have spent learning on top of my studies are C#, python, and HTML. These languages have helped me develop my problem solving skills.</p>
+  <br>
+  <hr>
+  <br>
+  <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eveniet quas asperiores atque qui vel saepe culpa temporibus voluptatum, at laudantium assumenda, maxime nesciunt eligendi, dicta quisquam placeat corporis sed!</p>
+  <hr>
+  <a href="page2.html" target = _blank title="This takes you to page 2">
+    Page 2
+  </a>
+  <hr>
   <button onclick="showMessage()">Click Me</button>
+  <br>
 
   <script src="script.js"></script>
 </body>
