Describe your update

--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is page 2</h1>
+    <h1>projects</h1>
+    <ol>
+        <li>Phone simulation - python</li>
+        <li>Quiz - python</li>
+        <li>Sudoku generator - python</li>
+        <li>3D terrain generator for EPQ - Unity C#</li>
+    </ol>
 </body>
 </html>
